--- a/TaskMngr/MainWindow.xaml
+++ b/TaskMngr/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TaskMngr"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" ResizeMode="NoResize">
     <Grid Margin="0">
         <DatePicker x:Name="datePicker" Margin="125,108,0,0" RenderTransformOrigin="2.159,-3.649" Height="24" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120"/>
         <StackPanel Margin="25,25,0,0" Height="111" VerticalAlignment="Top" HorizontalAlignment="Left" Width="100">
@@ -23,6 +23,15 @@
         <ScrollViewer x:Name="scroll" Margin="269,25,0,0" HorizontalContentAlignment="Right" VerticalContentAlignment="Stretch">
             <StackPanel x:Name="StackPanelV" ScrollViewer.CanContentScroll="True" Width="506"/>
         </ScrollViewer>
+        <ComboBox x:Name="comboBox2" HorizontalAlignment="Left" Margin="25,223,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="ComboBox2_SelectionChanged"/>
+        <Label x:Name="label4" Content="Sortuj według" HorizontalAlignment="Left" Margin="25,197,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.257,-0.317"/>
+        <Label x:Name="label5" Content="Filtruj:" HorizontalAlignment="Left" Margin="25,245,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.257,-0.317"/>
+        <CheckBox x:Name="checkBox" Content="Priorytet wysoki" HorizontalAlignment="Left" Margin="25,271,0,0" VerticalAlignment="Top" Checked="CheckBox_Checked"/>
+        <CheckBox x:Name="checkBox1" Content="Priorytet normalny" HorizontalAlignment="Left" Margin="25,291,0,0" VerticalAlignment="Top" Checked="CheckBox1_Checked"/>
+        <CheckBox x:Name="checkBox2" Content="Priorytet niski" HorizontalAlignment="Left" Margin="25,311,0,0" VerticalAlignment="Top" Checked="CheckBox2_Checked"/>
+        <CheckBox x:Name="checkBox3" Content="Nowe zadanie" HorizontalAlignment="Left" Margin="25,331,0,0" VerticalAlignment="Top"/>
+        <CheckBox x:Name="checkBox4" Content="Zadanie w realizacji" HorizontalAlignment="Left" Margin="25,351,0,0" VerticalAlignment="Top"/>
+        <CheckBox x:Name="checkBox5" Content="Zadanie zakończone" HorizontalAlignment="Left" Margin="25,371,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
