--- a/TaskMngr/MainWindow.xaml
+++ b/TaskMngr/MainWindow.xaml
@@ -27,8 +27,8 @@
         <Label x:Name="label4" Content="Sortuj według" HorizontalAlignment="Left" Margin="25,197,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.257,-0.317"/>
         <Label x:Name="label5" Content="Filtruj:" HorizontalAlignment="Left" Margin="25,245,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.257,-0.317"/>
         <CheckBox x:Name="checkBox" Content="Priorytet wysoki" HorizontalAlignment="Left" Margin="25,271,0,0" VerticalAlignment="Top" Checked="CheckBox_Checked"/>
-        <CheckBox x:Name="checkBox1" Content="Priorytet normalny" HorizontalAlignment="Left" Margin="25,291,0,0" VerticalAlignment="Top" Checked="CheckBox1_Checked"/>
-        <CheckBox x:Name="checkBox2" Content="Priorytet niski" HorizontalAlignment="Left" Margin="25,311,0,0" VerticalAlignment="Top" Checked="CheckBox2_Checked"/>
+        <CheckBox x:Name="checkBox1" Content="Priorytet normalny" HorizontalAlignment="Left" Margin="25,291,0,0" VerticalAlignment="Top"/>
+        <CheckBox x:Name="checkBox2" Content="Priorytet niski" HorizontalAlignment="Left" Margin="25,311,0,0" VerticalAlignment="Top"/>
         <CheckBox x:Name="checkBox3" Content="Nowe zadanie" HorizontalAlignment="Left" Margin="25,331,0,0" VerticalAlignment="Top"/>
         <CheckBox x:Name="checkBox4" Content="Zadanie w realizacji" HorizontalAlignment="Left" Margin="25,351,0,0" VerticalAlignment="Top"/>
         <CheckBox x:Name="checkBox5" Content="Zadanie zakończone" HorizontalAlignment="Left" Margin="25,371,0,0" VerticalAlignment="Top"/>
