--- a/TaskMngr/MainWindow.xaml
+++ b/TaskMngr/MainWindow.xaml
@@ -9,29 +9,29 @@
     <Grid Margin="0">
         <DatePicker x:Name="datePicker" Margin="125,108,0,0" RenderTransformOrigin="2.159,-3.649" Height="24" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120"/>
         <StackPanel Margin="25,25,0,0" Height="111" VerticalAlignment="Top" HorizontalAlignment="Left" Width="100">
-            <Label x:Name="label" Content="Zadanie:"/>
-            <Label x:Name="label1" Content="Priorytet"/>
-            <Label x:Name="label2" Content="Status"/>
-            <Label x:Name="label3" Content="Data"/>
+            <Label x:Name="taskNameInputTextBoxLabel" Content="Zadanie:"/>
+            <Label x:Name="prioritySelectorComboBoxLabel" Content="Priorytet"/>
+            <Label x:Name="statusSelectorComboBoxLabel" Content="Status"/>
+            <Label x:Name="datePickerLabel" Content="Data"/>
         </StackPanel>
-        <TextBox x:Name="textBox2" HorizontalAlignment="Left" Height="23" Margin="125,25,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <ComboBox x:Name="comboBox" HorizontalAlignment="Left" Margin="125,53,0,0" VerticalAlignment="Top" Width="120">
+        <TextBox x:Name="taskNameInputTextBox" HorizontalAlignment="Left" Height="23" Margin="125,25,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <ComboBox x:Name="prioritySelectorComboBox" HorizontalAlignment="Left" Margin="125,53,0,0" VerticalAlignment="Top" Width="120">
         </ComboBox>
-        <ComboBox x:Name="comboBox1" HorizontalAlignment="Left" Margin="125,80,0,0" VerticalAlignment="Top" Width="120">
+        <ComboBox x:Name="statusSelectorComboBox" HorizontalAlignment="Left" Margin="125,80,0,0" VerticalAlignment="Top" Width="120">
         </ComboBox>
-        <Button x:Name="button" Content="Zapisz zadanie" Margin="164,137,0,0" RenderTransformOrigin="2.181,0.936" HorizontalAlignment="Left" Width="81" Height="20" VerticalAlignment="Top" Click="Button_Click"/>
+        <Button x:Name="saveTaskButton" Content="Zapisz zadanie" Margin="164,137,0,0" RenderTransformOrigin="2.181,0.936" HorizontalAlignment="Left" Width="81" Height="20" VerticalAlignment="Top" Click="Button_Click"/>
         <ScrollViewer x:Name="scroll" Margin="269,25,0,0" HorizontalContentAlignment="Right" VerticalContentAlignment="Stretch">
             <StackPanel x:Name="StackPanelV" ScrollViewer.CanContentScroll="True" Width="506"/>
         </ScrollViewer>
-        <ComboBox x:Name="comboBox2" HorizontalAlignment="Left" Margin="25,223,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="ComboBox2_SelectionChanged"/>
-        <Label x:Name="label4" Content="Sortuj według" HorizontalAlignment="Left" Margin="25,197,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.257,-0.317"/>
-        <Label x:Name="label5" Content="Filtruj:" HorizontalAlignment="Left" Margin="25,245,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.257,-0.317"/>
-        <CheckBox x:Name="checkBox" Content="Priorytet wysoki" HorizontalAlignment="Left" Margin="25,271,0,0" VerticalAlignment="Top" Checked="CheckBox_Checked"/>
-        <CheckBox x:Name="checkBox1" Content="Priorytet normalny" HorizontalAlignment="Left" Margin="25,291,0,0" VerticalAlignment="Top"/>
-        <CheckBox x:Name="checkBox2" Content="Priorytet niski" HorizontalAlignment="Left" Margin="25,311,0,0" VerticalAlignment="Top"/>
-        <CheckBox x:Name="checkBox3" Content="Nowe zadanie" HorizontalAlignment="Left" Margin="25,331,0,0" VerticalAlignment="Top"/>
-        <CheckBox x:Name="checkBox4" Content="Zadanie w realizacji" HorizontalAlignment="Left" Margin="25,351,0,0" VerticalAlignment="Top"/>
-        <CheckBox x:Name="checkBox5" Content="Zadanie zakończone" HorizontalAlignment="Left" Margin="25,371,0,0" VerticalAlignment="Top"/>
+        <ComboBox x:Name="orderSelector" HorizontalAlignment="Left" Margin="25,223,0,0" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="orderSelectorLabel" Content="Sortuj według" HorizontalAlignment="Left" Margin="25,197,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.257,-0.317"/>
+        <Label x:Name="filterCheckBoxesLabel" Content="Filtruj:" HorizontalAlignment="Left" Margin="25,245,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.257,-0.317"/>
+        <CheckBox x:Name="filterHighPriorityCheckBox" Content="Priorytet wysoki" HorizontalAlignment="Left" Margin="25,271,0,0" VerticalAlignment="Top" Checked="CheckBox_Checked"/>
+        <CheckBox x:Name="filterNormalPriorityCheckBox" Content="Priorytet normalny" HorizontalAlignment="Left" Margin="25,291,0,0" VerticalAlignment="Top"/>
+        <CheckBox x:Name="filterLowPriorityCheckBox" Content="Priorytet niski" HorizontalAlignment="Left" Margin="25,311,0,0" VerticalAlignment="Top"/>
+        <CheckBox x:Name="filterNewTaskCheckBox" Content="Nowe zadanie" HorizontalAlignment="Left" Margin="25,331,0,0" VerticalAlignment="Top"/>
+        <CheckBox x:Name="filterInProgressTaskCheckBox" Content="Zadanie w realizacji" HorizontalAlignment="Left" Margin="25,351,0,0" VerticalAlignment="Top"/>
+        <CheckBox x:Name="filterFinishedTaskCheckBox" Content="Zadanie zakończone" HorizontalAlignment="Left" Margin="25,371,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
